flow_screen_components/workGuide/force-app/main/default/objects/AppProcessEvent__e/AppProcessEvent__e.object-meta.xml
<CustomObject>
    <label>AppProcessEvent</label>
    <pluralLabel>AppProcessEvents</pluralLabel>
</CustomObject>