flow_screen_components/workGuide/force-app/main/default/objects/AppProcessEvent__e/fields/appProcessDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>appProcessDefinitionId__c</fullName>
    <label>appProcessDefinitionId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>