flow_screen_components/workGuide/force-app/main/default/objects/AppProcessEvent__e/fields/appProcessInstanceId__c.field-meta.xml
<CustomField>
    <fullName>appProcessInstanceId__c</fullName>
    <label>appProcessInstanceId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>