flow_screen_components/workGuide/force-app/main/default/objects/AppProcessEvent__e/fields/appProcessStepId__c.field-meta.xml
<CustomField>
    <fullName>appProcessStepId__c</fullName>
    <label>appProcessStepId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>