flow_screen_components/workGuide/force-app/main/default/objects/AppProcessEvent__e/fields/parameters__c.field-meta.xml
<CustomField>
    <fullName>parameters__c</fullName>
    <label>parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>