flow_screen_components/workGuide/force-app/main/default/objects/AppProcessEvent__e/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>